--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  question: MyText
-  answer: MyString
+  content: MyText
+  timestamps: MyString
 
 two:
-  question: MyText
-  answer: MyString
+  content: MyText
+  timestamps: MyString
